{
    "name": "Player",
    "maps": [
        {
            "name": "player",
            "id": "c0aef0c3-6a84-4523-b0c4-b4fdd7d752b2",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "a7348375-92cd-495c-b622-c33722149cbe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Running",
                    "type": "Button",
                    "id": "d0851879-0ac0-4ea1-9f0f-fc2f6d22a7d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "onScreenTouch",
                    "type": "Button",
                    "id": "1d21b076-a60a-4f0c-9334-cdc071e1f847",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "touchScreenInitialPos",
                    "type": "Value",
                    "id": "c9c7c229-d60d-418c-960d-d8bd50d7c334",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "touchScreenCurrentPos",
                    "type": "Value",
                    "id": "992ac700-b8c3-4c2a-b946-7d18de4f6746",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "49605fca-758c-4f38-8cd3-d9407b290cbb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2b96ca56-8fb9-46ea-825b-203c7c872099",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "8ae47cf2-a780-4fb8-ae11-7eab5fd7393e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2093b73a-ec33-492a-85f9-b5171bdcfb3d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8d7b6239-3458-434a-ab8f-48f16f7324f2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2ff33f6a-4e1c-46c3-9af4-c95defbf94a8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8d146dc4-6b49-4f36-a9da-e40ef520bc28",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "732a3849-12a2-4d42-a4ce-00332be09370",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d1b7ad2-6b3b-4ea6-a462-5327b3ef722a",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4643463a-9af0-4e6c-84fb-bebeb93136cf",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "onScreenTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "759048e6-1524-44a6-825a-08db298352ab",
                    "path": "<Touchscreen>/primaryTouch/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchScreenInitialPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12bd9459-3963-4e70-ba52-4644b637248b",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touchScreenCurrentPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b6e9e96-6bf5-44fd-8f74-a09d8afd0d64",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd31294f-ba93-41a5-b056-c61117f12776",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "466f0152-0ea8-4f03-b4e5-894acf3606c0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}